# fusion

./: .coveragerc  .gitignore  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_funcionario_imagem.py
core/templates/: 404.html  500.html  base.html  contact.html  features.html  hero.html  index.html  servicos.html  team.html
core/tests/: test_forms.py  test_models.py
fusion/: settings.py  urls.py
