[tool.poetry]
name = "fusion"
version = "0.1.0"
description = ""
authors = ["gabriel.mango <gabriel.mango@defensoria.mg.def.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
djangorestframework = "^3.15.2"
django-crispy-forms = "^2.3"
django-filter = "^24.3"
django = "^5.0.8"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
dj-static = "^0.0.6"
django-stdimage = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
taskipy = "^1.13.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'python manage.py runserver'
migrate = 'python manage.py makemigrations && python manage.py migrate'
project = 'django-admin startproject $NAME'
app = 'django-admin startapp $NAME'
superuser = 'python manage.py createsuperuser'
pre_test = 'task lint'
test = 'pytest -s -x --cov=. -vv'
post_test = 'coverage html'
